--- a/main.css
+++ b/main.css
@@ -3,3 +3,24 @@
   font-weight: 700;
   font-style: italic;
 }
+.fa-calendar {
+  font-size: 5rem;
+  color: red;
+}
+
+.fa-calendar:hover {
+  color: rgb(114, 29, 29);
+  animation: pulse 0.8s ease-in-out infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
