--- a/main.css
+++ b/main.css
@@ -24,3 +24,13 @@
     transform: scale(1);
   }
 }
+.name {
+}
+.name-cont {
+  background-color: yellow;
+  max-width: 1120px;
+  height: 30dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
