--- a/main.css
+++ b/main.css
@@ -1,45 +1,12 @@
-.name {
-  font-family: "Cormorant", serif;
-  font-weight: 700;
-  font-style: italic;
-}
-.fa-calendar {
-  font-size: 5rem;
-  color: red;
-}
-
-.fa-calendar:hover {
-  color: rgb(114, 29, 29);
-  animation: pulse 0.8s ease-in-out infinite;
-}
-.secNum {
-  font-size: 4rem;
-  background-color: grey;
-  max-width: 8rem;
-  text-align: center;
-  margin: 0 auto;
-}
-.again {
+.ins {
   display: none;
 }
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-  100% {
-    transform: scale(1);
-  }
+.playAgain {
+  display: none;
 }
-.name {
-}
-.name-cont {
-  background-color: yellow;
-  max-width: 1120px;
-  height: 30dvh;
+.hiddenNumber {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: grey;
 }
