--- a/main.css
+++ b/main.css
@@ -3,3 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  display: grid;
+  place-items: center;
+  height: 100dvh;
+  width: 100dvw;
+}
